--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,14 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+**/node_modules
+**/*~
+dist
+package-lock.json
+**/*solved*
+**/*Config.js*
+!telemetry.config.json
+/public/*.js
+/public/*.html
+src/apiConfig.js
